review animation bug stuck

--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -172,8 +172,6 @@
 
 	padding: 30px;
 
-	border-top-left-radius: 0;
-	border-top-right-radius: 0;
 }
 
 @media screen and (max-width: 1320px) {
